update comment and remove redundant code